# reaper

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE_DIAGRAMS.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_PATTERNS.md  Dockerfile  Enforcement.md  IMPLEMENTATION_PLAN.md  Makefile  OPTIMIZATION_ANALYSIS.md  POLICY_TESTS.md  PROJECT_CLEANUP_SUMMARY.md  README.md  SECURITY.md  SIDECAR_DEPLOYMENT.md  SUMMARY.md  WASM_COMPATIBILITY.md  bundles.md  clippy.toml  deny.toml  docker-compose.benchmark.yml  docker-compose.full.yml  docker-compose.observability.yml  docker-compose.trading.yml  docker-compose.yml  index.html  rbac.rbb  test-data.json
benchmarks/reaper-vs-opa/: .github-workflow-benchmark.yml  .gitignore  CI_UPDATES_SUMMARY.md  Cargo.toml  DOCKER.md  EBPF_BENCHMARKING.md  OPA_COMPARISON_SUITE.md  README.md  STRUCTURE.md  docker-compose.yml  slo.yaml
benchmarks/reaper-vs-opa/data/: generate_all_data.sh
benchmarks/reaper-vs-opa/src/: main.rs  transport.rs
benchmarks/reaper-vs-opa/trends-page/: index.html
crates/message-queue/: Cargo.toml
crates/message-queue/src/: lib.rs
crates/message-queue/tests/: message_queue_bdd_tests.rs.backup
crates/metrics/: Cargo.toml
crates/metrics/benches/: metrics_bench.rs
crates/metrics/src/: lib.rs
crates/metrics/tests/: metrics_bdd_tests.rs.backup
crates/policy-engine/: BENCHMARKS.md  BENCHMARK_RESULTS.md  COMPLETE_INTEGRATION_GUIDE.md  Cargo.toml  OPTIMIZATION_PHASES_COMPLETE.md  PHASE_1_INDEXING_COMPLETE.md  PHASE_4_COMPILATION_COMPLETE.md  README.md  SUMMARY_FOR_USER.md
crates/policy-engine/benches/: builtins_bench.rs  caching_bench.rs  complex_policy_bench.rs  data_scaling_bench.rs  e2e_bench.rs  optimization_phases_bench.rs  policy_evaluation_bench.rs  rebac_bench.rs  simd_bench.rs
crates/policy-engine/examples/: array_set_examples.reap  baseline_performance.rs  benchmark_10k.rs  benchmark_builtins.rs  benchmark_comprehensions.rs  benchmark_decision_matrix.rs  benchmark_policy_lookup.rs  builtin_examples.reap  cedar_policies.md  cedar_with_data.rs  cold_start_bench.rs  collection_operations_policies.reap  comparison_baseline_vs_compiled.rs  comparison_indexed_vs_linear.rs  comparison_rbac_baseline_vs_optimized.rs  comprehension_array_example.reap  comprehension_object_example.reap  comprehension_rbac_example.reap  comprehension_set_example.reap  d2_pruning_impact.rs  data_distribution_memory.rs  data_store_demo.rs  decision_capture_bench.rs  generate_abac_data.rs  generate_dualsource_data.rs  generate_functions_data.rs  generate_huge_data.rs  generate_large_data.rs  generate_multilayer_data.rs  generate_rbac_data.rs  generate_rebac_data.rs  http_client.rs  http_server.rs  input_check_bench.rs  json_operations_policies.reap  math_functions_policies.reap  memory_volume_test.rs  multi_language_demo.rs  performance_shootout.rs  rbac_with_sets.reap  (+33 more)
crates/policy-engine/scripts/: profile.sh
crates/policy-engine/src/: arena.rs  batch.rs  cache_config.rs  clock.rs  compiled_evaluator.rs  decision_buffer.rs  decision_cache.rs  decision_export.rs  decision_log.rs  decision_matrix.rs  decision_privacy.rs  engine.rs  fast_parse.rs  indexed_engine.rs  lib.rs  optimized_engine.rs  partial_evaluation.rs  policy_compilation.rs  reap.pest  regex_cache.rs
crates/policy-engine/tests/: actor_binding_tests.rs  audit_invariant_tests.rs  builtin_differential_tests.proptest-regressions  builtin_differential_tests.rs  cedar_integration_tests.rs  check_mode_differential_tests.rs  comparison_runner.rs  compiled_ast_equivalence_tests.rs  compiled_evaluator_tests.rs  comprehension_tests.rs  concurrent_hotswap_tests.rs  context_interner_leak_tests.rs  data_epoch_tests.rs  debug_first_test.rs  decision_logging_tests.rs  delta_sync_differential_tests.rs  differential_parity_tests.proptest-regressions  differential_parity_tests.rs  dsl_depth_limit_tests.rs  eval_interner_bounding_tests.rs  failure_modes_tests.rs  frozen_decision_corpus_tests.rs  func_import_tests.rs  gherkin_tests.rs  i18n_tests.rs  input_check_differential_tests.rs  input_compare_differential_tests.rs  input_comprehension_differential_tests.rs  input_document_tests.rs  integration_runner.rs  large_scale_tests.rs  memory_resource_tests.rs  migration_rename_interner_tests.rs  mixed_mode_differential_tests.rs  policy_bdd_tests.rs.backup  policy_library_tests.rs  pruning_index_tests.rs  rebac_interner_bounding_tests.rs  rebac_tests.rs  reference_examples_parse_tests.rs  (+8 more)
crates/reaper-core/: Cargo.toml
crates/reaper-core/benches/: reaper_bench.rs
crates/reaper-core/src/: agent.rs  bundle_signing.rs  capability.rs  config.rs  error.rs  lib.rs  platform.rs  policy.rs  revocation.rs
crates/reaper-core/tests/: capability_tests.rs  reaper_bdd_tests.rs  reaper_bdd_tests.rs.backup
crates/reaper-ebpf/: ARCHITECTURE_NOTE.md  BUILD.md  Cargo.toml  README.md
crates/reaper-ebpf/examples/: complete_ebpf_system.rs  ebpf_benchmarks.rs
crates/reaper-ebpf/reaper-ebpf-kern/: Cargo.toml  README.md
crates/reaper-ebpf/src/: analyzer.rs  compiler.rs  controller.rs  custom.rs  entity.rs  jwt.rs  learning.rs  lib.rs  loader.rs  slow_path.rs  tier.rs  types.rs  validation.rs
crates/reaper-ebpf/tests/: integration_test.rs  integration_tests.rs
crates/reaper-sdk/: Cargo.toml  README.md
crates/reaper-sdk/examples/: basic_usage.rs
crates/reaper-sdk/src/: error.rs  http_client.rs  lib.rs  transport.rs  types.rs  uds_client.rs
crates/reaper-sdk/tests/: uds_integration_test.rs
crates/reaper-wasm/: Cargo.toml  README.md
crates/reaper-wasm/demo/: index.html
crates/reaper-wasm/scripts/: package-npm.mjs
crates/reaper-wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile_reap.rs  parse_reap.rs
services/reaper-agent/: Cargo.toml  Dockerfile
services/reaper-bench/: Cargo.toml  Dockerfile
services/reaper-management/: Cargo.toml  Dockerfile  README.md
services/reaper-platform/: Cargo.toml  Dockerfile
services/reaper-sync/: Cargo.toml
tests/e2e/: Cargo.toml  run-e2e-tests.sh
tools/reaper-cli/: Cargo.toml
tools/reaper-mcp/: Cargo.toml
(+2369 files in other folders)
