[workspace]
resolver = "2"
members = [
    "crates/reaper-core",
    "crates/policy-engine",
    "crates/message-queue",
    "crates/metrics",
    "crates/reaper-sdk",
    "services/reaper-agent",
    "services/reaper-platform",
    "tools/reaper-cli",
    "crates/reaper-ebpf",
]
exclude = [
    "benchmarks/reaper-vs-opa",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde", "js"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

# Performance-oriented data structures
dashmap = "6.1.0"
parking_lot = "0.12"

# Testing frameworks
tokio-test = "0.4"
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.0"

# BDD Testing
cucumber = "0.22.0"
async-trait = "0.1"
reqwest = { version = "0.12.26", features = ["json"] }

# Web framework for API services
axum = { version = "0.8.7", features = ["json", "tokio"] }
tower = "0.5.2"
hyper = "1.8.1"

# Cryptography for SDK and bundle verification
sha2 = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
bincode = "1.3"

[workspace.metadata.release]
shared-version = true
tag-message = "Reaper {{version}}"
pre-release-commit-message = "chore: Release Reaper {{version}}"
post-release-commit-message = "chore: Bump to next dev version"
