[workspace]
resolver = "2"
members = [
    "crates/reaper-core",
    "crates/policy-engine",
    "crates/reaper-sdk",
    "crates/reaper-ebpf",
    "services/reaper-agent",
    "services/reaper-platform",
    "services/reaper-sync",
    "services/reaper-management",
    "services/reaper-bench",
    "tools/reaper-cli",
    "tests/e2e",
]
exclude = [
    "benchmarks/reaper-vs-opa",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.19", features = ["v4", "v5", "serde", "js", "fast-rng"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }

# Performance-oriented data structures
dashmap = "6.1.0"
parking_lot = "0.12"
rustc-hash = "2.0"  # Fast FxHashSet/FxHashMap for non-DoS-resistant hashing
arc-swap = "1.7"
smallvec = "1.13"   # Inline small collections (ReBAC adjacency lists stay heap-free)
crossbeam-utils = "0.8"  # CachePadded to avoid false sharing between ring shards

# Testing frameworks
tokio-test = "0.4"
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.0"

# BDD Testing
cucumber = "0.21"
async-trait = "0.1"
reqwest = { version = "0.12.26", features = ["json"] }
futures = "0.3"

# Web framework for API services
axum = { version = "0.8.7", features = ["json", "tokio"] }
tower = "0.5.2"
hyper = "1.8.1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"

# Cryptography for SDK and bundle verification
sha2 = "0.10"
ed25519-dalek = "2"
hmac = "0.12"      # Keyed principal pseudonymization in decision logs
aes-gcm = "0.10"   # AEAD encryption of decision-log input_data at rest
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
postcard = { version = "1.1", features = ["alloc"] }

[workspace.metadata.release]
shared-version = true
tag-message = "Reaper {{version}}"
pre-release-commit-message = "chore: Release Reaper {{version}}"
post-release-commit-message = "chore: Bump to next dev version"

# Release profile tuned for the sub-microsecond hot path. Fat LTO and a single
# codegen unit let the optimizer inline across crate boundaries (engine ->
# evaluators -> data store); `panic = "abort"` removes landing pads from the hot
# path and shrinks the binary. These matter most for an allocation- and
# call-heavy workload like policy evaluation.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Benchmarks need unwinding (criterion) and must not abort on panic; otherwise
# inherit the release optimizations.
[profile.bench]
lto = "fat"
codegen-units = 1
