[package]
name = "reaper-vs-opa-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "generate-data"
path = "src/bin/generate_data.rs"

[dependencies]
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
hdrhistogram = "7.5"
indicatif = "0.17"
colored = "2.1"
tabled = "0.16"

[dev-dependencies]
criterion = "0.5"
