[package]
name = "reaper-vs-opa-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "generate-data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "slo-harness"
path = "src/bin/slo_harness.rs"

[dependencies]
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
chrono = "0.4"
hdrhistogram = "7.5"
indicatif = "0.17"
# slo-agentic scenario (Plan 06 Phase D DoD): mint real signed capabilities
# with the exact issuance code the product uses, so the harness can never
# drift from the agent's verification semantics.
reaper-core = { path = "../../crates/reaper-core" }
ed25519-dalek = "2"
colored = "2.1"
tabled = "0.16"
# Unix-domain-socket transport for the benchmark harness. Both Reaper (axum over
# UnixListener) and OPA (`--addr unix://…`) serve the *same* HTTP/1.1 API over a
# socket, so a hyper client with a Unix connector benchmarks either engine over
# UDS with no protocol change. reqwest has no UDS transport, hence raw hyper here.
hyper = { version = "1.8", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
tower = "0.5"
bytes = "1"

[dev-dependencies]
criterion = "0.5"
