[package]
name = "message-queue"
version = "0.1.0"
edition = "2021"
description = "Reliable async message processing for Reaper"
license = "MIT OR Apache-2.0"

[dependencies]
reaper-core = { path = "../reaper-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }

[[test]]
name = "message_queue_bdd_tests"
harness = false
