
[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance policy evaluation engine"
license = "MIT OR Apache-2.0"

[dependencies]
reaper-core = { path = "../reaper-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
cedar-policy = "4.2"
pest = "2.7"
pest_derive = "2.7"
bincode = "1.3"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
anyhow = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "policy_evaluation_bench"
harness = false

[[test]]
name = "policy_bdd_tests"
harness = false

[[test]]
name = "gherkin_tests"
harness = false
