
[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "High-performance policy evaluation engine"
license = "MIT OR Apache-2.0"

[features]
# Native default = everything on: zero behavior change for existing consumers.
# The wasm32 build target (F2, plans/round-2/F2-wasm-target.md) selects down
# with --no-default-features to drop native-only machinery (rayon threads,
# tokio timers, host crypto RNG, Cedar's heavyweight dep).
default = ["cedar", "batch", "audit-buffer"]
# AWS Cedar policy language support (CedarPolicyEvaluator). Without it,
# deploying a PolicyLanguage::Cedar policy fails with a clear error.
cedar = ["dep:cedar-policy"]
# Parallel batch evaluation (rayon work-stealing pool — native only).
batch = ["dep:rayon"]
# Decision-log privacy: keyed pseudonymization + input_data AEAD encryption.
decision-privacy = ["dep:aes-gcm", "dep:hmac"]
# Async decision buffer + file export (host runtime: tokio sync/time timers,
# background writer thread, std::fs). Implies decision-privacy.
audit-buffer = ["decision-privacy", "dep:tokio"]

[dependencies]
reaper-core = { path = "../reaper-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
crossbeam-utils = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
cedar-policy = { version = "4.2", optional = true }
pest = "2.7"
pest_derive = "2.7"
postcard = { workspace = true }
regex = "1.10"
sha2 = { workspace = true }
hmac = { workspace = true, optional = true }     # Keyed principal pseudonymization (decision logs)
aes-gcm = { workspace = true, optional = true }  # AEAD encryption of decision-log input_data
base64 = { workspace = true }
hex = "0.4"  # Hex encoding for checksums
memchr = "2.7"  # SIMD-accelerated string search
lazy_static = "1.4"  # Thread-local regex cache global state
bumpalo = { version = "3.16", features = ["collections"] }  # Arena allocator for zero-alloc evaluation
rayon = { version = "1.10", optional = true }  # Parallel batch evaluation
# Async durable-ack for mandatory-audit decision logging (oneshot + timeout).
# Only sync/time are needed in non-test code; the dev-dependency pulls full.
tokio = { version = "1", features = ["sync", "time"], optional = true }

# JSON parsing: sonic-rs (SIMD) for native, serde_json for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sonic-rs = "0.5"

# wasm32-unknown-unknown has no ambient clock; chrono's `wasmbind` routes
# Utc::now() through JS Date (the JS-first packaging decision). Deterministic
# embeddings pin time via `clock::set_injected_now_unix_ns` instead.
[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
criterion = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { version = "0.7", features = ["cors"] }
reqwest = { workspace = true, features = ["json"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
anyhow = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "policy_evaluation_bench"
harness = false

[[bench]]
name = "builtins_bench"
harness = false

[[bench]]
name = "caching_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

[[bench]]
name = "complex_policy_bench"
harness = false

[[bench]]
name = "data_scaling_bench"
harness = false

[[test]]
name = "gherkin_tests"
harness = false

[[bench]]
name = "rebac_bench"
harness = false

# Plan 05, Step 6 burn-down: this crate carries legacy reachable unwrap()/expect()
# debt and has NOT yet opted into the workspace panic-safety gate. Once the debt
# is retired, enable it here:
#   [lints]
#   workspace = true
