[package]
name = "reaper-ebpf"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "eBPF LSM policy enforcement for Reaper - kernel-level <100ns evaluation"

[dependencies]
# Core dependencies
policy-engine = { path = "../policy-engine" }
reaper-core = { path = "../reaper-core" }

# eBPF userspace framework
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Collections
dashmap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = "0.4"
jsonwebtoken = "9"
base64 = "0.22"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# Enable eBPF mode in policy-engine
ebpf-mode = []
