[package]
name = "reaper-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Reaper Contributors"]
description = "High-performance SDK for Reaper policy evaluation"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
