[package]
name = "reaper-agent"
version = "0.1.0"
edition = "2021"
# Not published to crates.io — internal workspace crate (Plan 06: lets
# cargo-deny treat it as private for license/wildcard checks).
publish = false
description = "Reaper Agent - High-performance policy enforcement"

[lib]
name = "reaper_agent"
path = "src/lib.rs"

[[bin]]
name = "reaper-agent"
path = "src/main.rs"

[dependencies]
reaper-core = { path = "../../crates/reaper-core" }
policy-engine = { path = "../../crates/policy-engine" }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
sonic-rs = "0.3"  # SIMD-accelerated JSON parsing
mimalloc = { version = "0.1", default-features = false }  # fast allocator for the hot path
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-appender = "0.2"
tower = { workspace = true }
tower-http = { version = "0.6", features = ["catch-panic"] }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
scopeguard = "1.2"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
tempfile = "3.8"
thiserror = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
futures = { workspace = true }
sha2 = { workspace = true }
hostname = "0.4"
parking_lot = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
hdrhistogram = "7.5"
sysinfo = "0.32"
core_affinity = "0.8"  # pin thread-per-core UDS shards to cores

# TLS/mTLS support
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
tokio-rustls = "0.26"

[dev-dependencies]
criterion = { workspace = true }
cucumber = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = "1"

[[example]]
name = "throughput"
path = "examples/throughput.rs"

[[example]]
name = "uds_shard"
path = "examples/uds_shard.rs"

[[bench]]
name = "agent_bench"
harness = false

# Plan 05, Step 6 burn-down: this crate carries legacy reachable unwrap()/expect()
# debt and has NOT yet opted into the workspace panic-safety gate. Once the debt
# is retired, enable it here:
#   [lints]
#   workspace = true
